--- a/buildpack.toml
+++ b/buildpack.toml
@@ -15,9 +15,10 @@
 api = "0.2"
 
 [buildpack]
-id      = "paketo-buildpacks/sbt"
-name    = "Paketo SBT Buildpack"
-version = "{{.version}}"
+id       = "paketo-buildpacks/sbt"
+name     = "Paketo SBT Buildpack"
+version  = "{{.version}}"
+homepage = "https://github.com/paketo-buildpacks/sbt"
 
 [[stacks]]
 id = "io.buildpacks.stacks.bionic"
