--- a/buildpack.toml
+++ b/buildpack.toml
@@ -30,15 +30,18 @@ id = "org.cloudfoundry.stacks.cflinuxfs3"
 name        = "BP_SBT_BUILD_ARGUMENTS"
 description = "the arguments to pass to Maven"
 default     = "universal:packageBin"
+build       = true
 
 [[metadata.configurations]]
 name        = "BP_SBT_BUILT_ARTIFACT"
 description = "the built application artifact explicitly.  Supersedes $BP_SBT_BUILT_MODULE"
 default     = "target/universal/*.zip"
+build       = true
 
 [[metadata.configurations]]
 name        = "BP_SBT_BUILT_MODULE"
 description = "the module to find application artifact in"
+build       = true
 
 [[metadata.dependencies]]
 id      = "sbt"
