--- a/.github/workflows/update-sbt.yml
+++ b/.github/workflows/update-sbt.yml
@@ -42,7 +42,7 @@ jobs:
             - id: dependency
               uses: docker://ghcr.io/paketo-buildpacks/actions/github-release-dependency:main
               with:
-                glob: sbt-*.tgz
+                glob: sbt-.+.tgz
                 owner: sbt
                 repository: sbt
                 token: ${{ secrets.GITHUB_TOKEN }}
