--- a/buildpack.toml
+++ b/buildpack.toml
@@ -12,13 +12,19 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-api = "0.5"
+api = "0.6"
 
 [buildpack]
-id       = "paketo-buildpacks/sbt"
-name     = "Paketo SBT Buildpack"
-version  = "{{.version}}"
-homepage = "https://github.com/paketo-buildpacks/sbt"
+id          = "paketo-buildpacks/sbt"
+name        = "Paketo SBT Buildpack"
+version     = "{{.version}}"
+homepage    = "https://github.com/paketo-buildpacks/sbt"
+description = "A Cloud Native Buildpack that builds SBT-based applications from source"
+keywords    = ["java", "sbt", "scala", "build-system"]
+
+[[buildpack.licenses]]
+type = "Apache-2.0"
+uri  = "https://github.com/paketo-buildpacks/sbt/blob/main/LICENSE"
 
 [[stacks]]
 id = "io.buildpacks.stacks.bionic"
