Implement RFC 0050: Rename Buildpack
Renames 'Paketo SBT Buildpack' to 'Paketo Buildpack for SBT'.

Implements RFC 0050, https://github.com/paketo-buildpacks/rfcs/issues/233, for this buildpack.

Signed-off-by: Daniel Mikusa <dmikusa@vmware.com>

--- a/buildpack.toml
+++ b/buildpack.toml
@@ -19,7 +19,7 @@ api = "0.7"
   homepage = "https://github.com/paketo-buildpacks/sbt"
   id = "paketo-buildpacks/sbt"
   keywords = ["java", "sbt", "scala", "build-system"]
-  name = "Paketo SBT Buildpack"
+  name = "Paketo Buildpack for SBT"
   sbom-formats = ["application/vnd.cyclonedx+json", "application/vnd.syft+json"]
   version = "{{.version}}"
 
