--- a/buildpack.toml
+++ b/buildpack.toml
@@ -53,6 +53,18 @@ api = "0.7"
     description = "the path to the SBT repositories file"
     name = "BP_SBT_REPOSITORIES_FILE"
 
+  [[metadata.configurations]]
+    build = true
+    default = ""
+    description = "colon separated list of glob patterns, matched source files are included"
+    name = "BP_INCLUDE_FILES"
+
+  [[metadata.configurations]]
+    build = true
+    default = ""
+    description = "colon separated list of glob patterns, matched source files are removed"
+    name = "BP_EXCLUDE_FILES"
+
   [[metadata.dependencies]]
     cpes = ["cpe:2.3:a:lightbend:sbt:1.7.2:*:*:*:*:*:*:*"]
     id = "sbt"
